Added Solana Pay & Solana Wallet support

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MERCHANT_WALLET_ADDRESS='9x5KYRHnPySWBi83QMBh1Ueg5dkuJfiyCbDqUPMTbVzT'
+STORE_ADDRESS_SOLANA=D8Sina2zfabdcwgUM3BhcpMpw26xqYAUxAUYjJAatUur
+SPL_TOKEN_ADDRESS_USDC=EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
